--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,22 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jaws-bin.jar=C:\\Users\\sobhy\\Documents\\NetBeansProjects\\4th year project libs\\jaws-bin.jar
+file.reference.slf4j-api.jar=C:\\Users\\sobhy\\Documents\\NetBeansProjects\\4th year project libs\\stanford-postagger-full-2015-12-09\\lib\\slf4j-api.jar
+file.reference.slf4j-simple.jar=C:\\Users\\sobhy\\Documents\\NetBeansProjects\\4th year project libs\\stanford-postagger-full-2015-12-09\\lib\\slf4j-simple.jar
+file.reference.stanford-postagger-3.6.0-javadoc.jar=C:\\Users\\sobhy\\Documents\\NetBeansProjects\\4th year project libs\\stanford-postagger-full-2015-12-09\\stanford-postagger-3.6.0-javadoc.jar
+file.reference.stanford-postagger-3.6.0-sources.jar=C:\\Users\\sobhy\\Documents\\NetBeansProjects\\4th year project libs\\stanford-postagger-full-2015-12-09\\stanford-postagger-3.6.0-sources.jar
+file.reference.stanford-postagger-3.6.0.jar=C:\\Users\\sobhy\\Documents\\NetBeansProjects\\4th year project libs\\stanford-postagger-full-2015-12-09\\stanford-postagger-3.6.0.jar
+file.reference.stanford-postagger.jar=C:\\Users\\sobhy\\Documents\\NetBeansProjects\\4th year project libs\\stanford-postagger-full-2015-12-09\\stanford-postagger.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jaws-bin.jar}
+    ${file.reference.jaws-bin.jar}:\
+    ${file.reference.stanford-postagger.jar}:\
+    ${file.reference.stanford-postagger-3.6.0-javadoc.jar}:\
+    ${file.reference.stanford-postagger-3.6.0-sources.jar}:\
+    ${file.reference.stanford-postagger-3.6.0.jar}:\
+    ${file.reference.slf4j-api.jar}:\
+    ${file.reference.slf4j-simple.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
